# codereviewprompt

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
codereviewprompt/: build_langs.py  cli.py  context.py  diff.py
src/codereviewprompt/: __init__.py  cli.py
tests/: test_build_langs.py  test_cli.py  test_cli_buildlangs.py  test_cli_listlangs.py  test_cli_run.py  test_context.py  test_diff.py
